Responsive for large screens, youtube video not showing, please fix

--- a/web_static/static/styles/main_vid.css
+++ b/web_static/static/styles/main_vid.css
@@ -55,7 +55,7 @@ del {
   text-decoration: line-through;
 }
 
-/* En el código HTML es necesario añadir cellspacing="0" */
+/* En el c贸digo HTML es necesario a帽adir cellspacing="0" */
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -168,7 +168,7 @@ nav a:hover {
 }
 .movie-from {
   position: relative;
-  margin-top: -8%;
+  margin-top: -6%;
   width: max-content;
   margin-left: auto;
   margin-right: auto;
@@ -201,33 +201,6 @@ nav a:hover {
 }
 
 /*---------- FOOTER ----------------*/
-footer{
-  text-align: center;
-  font-family: 'Bebas Neue', cursive;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-}
-
-.credits{
-  display: inline-block;
-  position: relative;
-  font-family: 'Bebas Neue', cursive;
-}
-.credits-scale {
-  display: inline-block;
-  font-size: 55%;
-  transform: scale(1, 1.3);
-}
-  
-#img-sabor{
-  width: 25%;
-}
-#img-mini{
-  width: 20%;
-}
-
-/*---------- FOOTER 2 ----------------*/
 .landscape {
   font-family: 'Bebas Neue', cursive;
   position: absolute;
@@ -432,7 +405,7 @@ footer{
     margin-top: 0.4%;
   }
   .movie-from {
-    margin-top: -6.5%;
+    margin-top: -5%;
   }
   /*------------ FOOTER -------------*/
   .landscape {
@@ -462,6 +435,9 @@ footer{
 
 @media screen and (min-width: 667px) {
   /*------- SLIDER ----------*/
+  #primer-slider {
+    margin-top: 0;
+  }
   .in-con {
     font-size: 65%;
   }
@@ -490,7 +466,7 @@ footer{
     margin-top: 0.4%;
   }
   .movie-from {
-    margin-top: -8%;
+    margin-top: -5%;
     padding: 2%;
   }
 
@@ -503,7 +479,7 @@ footer{
 @media screen and (min-width: 736px) {
   /*------- SLIDER ----------*/
   .movie-from {
-    margin-top: -7%;
+    margin-top: -5%;
   }
 }
 
@@ -516,6 +492,8 @@ footer{
     font-size: 60%;
   }
   .in-names-all {
+    /*margin-top: -0.56%;*/
+    margin-top: -0.6%;
     font-size: 60%;
   }
   .in-camara {
@@ -530,12 +508,8 @@ footer{
   .in-daza {
     font-size: 60%;
   }
-
-  .in-names-all {
-    margin-top: -0.56%;
-  }
   .line-up-2 {
-    margin-top: 0.37%;
+    margin-top: 0.2%;
   }
   .movie-from {
     margin-top: -5%;
@@ -590,7 +564,7 @@ footer{
     margin-top: 0.5%;
   }
   .movie-from {
-    margin-top: -4%;
+    margin-top: -3%;
     padding: 2%;
   }
   .in-peli {
@@ -623,4 +597,19 @@ footer{
   width: 10%;
 }
   
+}
+
+@media screen and (min-width: 1400px) {
+    .in-names-all {
+    margin-top: -0.2%;
+    }
+    .line-up-2 {
+    margin-top: 0.8%;
+    }
+    .movie-form {
+        margin-top: 2%;
+    }
+    .in-names-3 {
+        margin-top: 2.4%;
+    }
 }
